--- a/index.html
+++ b/index.html
@@ -5,18 +5,48 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="jquery-ui/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
 
     <title></title>
 
 </head>
 <body>
+<section class="content">
+<div class="grid grid--effect-vega" id="grid_container">
+
+	
+	<a href="#" class="grid__item grid__item--c1" id="square_ref" style="display:none">
+		<div class="stack">
+			<div class="stack__deco"></div>
+			<div class="stack__deco"></div>
+			<div class="stack__deco"></div>
+			<div class="stack__deco"></div>
+			<div class="stack__figure">
+				<div style="background-color:#1BE7FF; width:100%; height: 100%"></div>
+			</div>
+		</div>
+		<div class="grid__item-caption">
+			<h3 class="grid__item-title"></h3>
+							
+
+		</div>
+	</a>
+
+</div><!-- /grid -->
+</section>
 
 <div id="popups">
 </div>
 
 <script src="Script2.js"></script>
+<script src="js/anime.min.js"></script>
+<script src="js/main.js"></script>
+<script>
 
+		</script>
 </body>
 </html>
