--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div style="background-color:#1BE7FF; width:100%; height: 100%"></div>
 			</div>
 		</div>
-		<div class="grid__item-caption">
+		<div class="grid__item-caption" style="display:none;">
 			<h3 class="grid__item-title"></h3>
 							
 
