--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <div id="popups">
 </div>
 
+<div id="blue_screen" style="position: absolute; top: 0px;display:none"><img src='img/blueScreenError.png'></div>
 <script src="Script2.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/main.js"></script>
