--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="stack__deco"></div>
 			<div class="stack__deco"></div>
 			<div class="stack__figure">
-				<div style="background-color:#1BE7FF; width:100%; height: 100%"></div>
+				<div style="background-color:#1BE7FF; width:100%; height: 100%; border: 0.5px solid #00000036;"></div>
 			</div>
 		</div>
 		<div class="grid__item-caption" style="display:none;">
