--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="popups">
 </div>
 
-<div id="blue_screen" style="position: absolute; top: 0px;display:none"><img src='img/blueScreenError.png'></div>
+<div id="blue_screen" style="position: absolute; top: 0px;display:none;    height: 100%;"><img src='img/blueScreenError.png' style="    height: 100%;"></div>
 <script src="Script2.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/main.js"></script>
