--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 </head>
 <body>
+<div class='safemode leftup'>Safe Mode</div>
+<div class='safemode rightup'>Safe Mode</div>
+<div class='safemode rightbottom'>Safe Mode</div>
+<div class='safemode leftbottom'>Safe Mode</div>
 <section class="content">
 <div class="grid grid--effect-vega" id="grid_container">
 
@@ -26,7 +30,7 @@
 			<div class="stack__deco"></div>
 			<div class="stack__deco"></div>
 			<div class="stack__figure">
-				<div style="background-color:#1BE7FF; width:100%; height: 100%; border: 0.5px solid #00000036;"></div>
+				<div class="puzzle_piece" style=" width:100%; height: 100%; border: 0.5px solid #00000036;"></div>
 			</div>
 		</div>
 		<div class="grid__item-caption" style="display:none;">
@@ -42,7 +46,11 @@
 <div id="popups">
 </div>
 
-<div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;"><img src='img/blueScreenError.png' style="    width: 100%;"></div>
+<div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
+	<img src='img/blueScreenError.png' style=" width: 100%;">
+	<div id="safemode_button">Restart in Safe Mode</div>
+</div>
+
 <script src="Script2.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/main.js"></script>
