--- a/index.html
+++ b/index.html
@@ -23,22 +23,7 @@
 <div class="grid grid--effect-vega" id="grid_container">
 
 	
-	<a href="#" class="grid__item grid__item--c1" id="square_ref" style="display:none">
-		<div class="stack">
-			<div class="stack__deco"></div>
-			<div class="stack__deco"></div>
-			<div class="stack__deco"></div>
-			<div class="stack__deco"></div>
-			<div class="stack__figure">
-				<div class="puzzle_piece" style=" width:100%; height: 100%; border: 0.5px solid #00000036;"></div>
-			</div>
-		</div>
-		<div class="grid__item-caption" style="display:none;">
-			<h3 class="grid__item-title"></h3>
-							
 
-		</div>
-	</a>
 
 </div><!-- /grid -->
 </section>
@@ -46,16 +31,32 @@
 <div id="popups">
 </div>
 
+<a class="grid__item grid__item--c1" id="square_ref" style="display:none">
+	<div class="stack">
+		<div class="stack__deco"></div>
+		<div class="stack__deco"></div>
+		<div class="stack__deco"></div>
+		<div class="stack__deco"></div>
+		<div class="stack__figure">
+			<div class="puzzle_piece" style=" width:100%; height: 100%; border: 0.5px solid #00000036;"></div>
+		</div>
+	</div>
+	<div class="grid__item-caption" style="display:none;">
+		<h3 class="grid__item-title"></h3>
+							
+
+	</div>
+</a>
+
 <div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
 	<img src='img/blueScreenError.png' style=" width: 100%;">
 	<div id="safemode_button">Restart in Safe Mode</div>
 </div>
 
+
 <script src="Script2.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/main.js"></script>
-<script>
 
-		</script>
 </body>
 </html>
