--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <div class='safemode rightup'>Safe Mode</div>
 <div class='safemode rightbottom'>Safe Mode</div>
 <div class='safemode leftbottom'>Safe Mode</div>
+<div class="trashcan_container">
+<div class=' trashcan'><img src='img/delete.svg' width='60px'></div>
+<div class=' trashcan_open'><img src='img/delete_open.svg' width='60px' style='display:none'></div>
+</div>
 <section class="content">
 <div class="grid grid--effect-vega" id="grid_container">
 
