--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
 <div class=' trashcan'><img src='img/delete.svg' width='60px'></div>
 <div class=' trashcan_open'><img src='img/delete_open.svg' width='60px' style='display:none'></div>
 </div>
+<div>Good luck with the puzzle!</div>
 <section class="content">
 <div class="grid grid--effect-vega" id="grid_container">
-
-	
-
-
 </div><!-- /grid -->
 </section>
 
