--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
 <div class='safemode rightbottom'>Safe Mode</div>
 <div class='safemode leftbottom'>Safe Mode</div>
 <div class="trashcan_container">
-<div class=' trashcan'><img src='img/delete.svg' width='60px'></div>
-<div class=' trashcan_open'><img src='img/delete_open.svg' width='60px' style='display:none'></div>
+<div class=' trashcan'><img src='img/delete.png' width='200px'></div>
+<div class=' trashcan_open' style='display:none'><img src='img/delete_open.png' width='200px'></div>
 </div>
-<div>Good luck with the puzzle!</div>
+
 <section class="content">
+<div id="winning_screen" style="display:none"><div>WELL DONE!</div><div style="font-size:100px; clear:both">Thanks for playing</div>
+<a href="index.html">Play again</a>
+</div>
 <div class="grid grid--effect-vega" id="grid_container">
-</div><!-- /grid -->
+</div>
+<div id="restart_button">Restart game</div>
 </section>
 
 <div id="popups">
@@ -39,7 +43,7 @@
 		<div class="stack__deco"></div>
 		<div class="stack__deco"></div>
 		<div class="stack__figure">
-			<div class="puzzle_piece" style=" width:100%; height: 100%; border: 0.5px solid #00000036;"></div>
+			<div class="puzzle_piece" style=" width:100%; height: 100%;"></div>
 		</div>
 	</div>
 	<div class="grid__item-caption" style="display:none;">
