--- a/redmagic.html
+++ b/redmagic.html
@@ -13,11 +13,6 @@
 
 		<style>
 
-		#mycanvas
-		{
-			*width:  500px;
-			*height:  500px;
-		}
 
 	    
 	</style>
@@ -27,11 +22,12 @@
 
 	<canvas id="mycanvas"></canvas>
 
-
+<input type='text' id='write_thought'>
  
 
 		
-	<script type="text/javascript" src="js/redmagic_processing.js"> </script>
+<script type="text/javascript" src="js/redmagic_processing.js"> </script>
+
 </body>
 
 </html>
