Red magic is working
Added sound and intro animation to brain bugs, Red magic debugger is working

--- a/index.html
+++ b/index.html
@@ -1,67 +1,91 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="jquery-ui/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+  <meta charset="utf-8"> <!-- This may need to change depending on what characters you use -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <title></title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="jquery-ui/jquery-ui.js"></script>
+  <style>
+    body
+    {
+      background-color: black;
+    }
 
-    <title></title>
+    video
+    {
+      height:  100%;
+    }
 
+    #intro_loop
+    {
+      display: none;
+    }
+
+    #container
+    {
+      width: 100%;
+      height:  100%;
+    }
+
+    #text_start
+    {
+      color: white;
+      font-family: 'Press Start 2P';
+      font-size: 26px;
+      position: absolute;
+      bottom: 248px;
+      width: 100%;
+      text-align: center;
+      opacity:  0;
+      background-color: #ffabab87;
+      padding: 10px 0px;
+      cursor: pointer;
+    }
+
+  </style>
 </head>
 <body>
-<div class='safemode leftup'>Safe Mode</div>
-<div class='safemode rightup'>Safe Mode</div>
-<div class='safemode rightbottom'>Safe Mode</div>
-<div class='safemode leftbottom'>Safe Mode</div>
-<div class="trashcan_container">
-<div class=' trashcan'><img src='img/delete.png' width='200px'></div>
-<div class=' trashcan_open' style='display:none'><img src='img/delete_open.png' width='200px'></div>
-</div>
 
-<section class="content">
-<div id="winning_screen" style="display:none"><div>WELL DONE!</div><div style="font-size:100px; clear:both">Thanks for playing</div>
-<a href="index.html">Play again</a>
-</div>
-<div class="grid grid--effect-vega" id="grid_container">
-</div>
-<div id="restart_button">Restart game</div>
-</section>
+  <div id="container">
+    <video id="intro_anim" autoplay  muted >
+      <source src="videos/BrainBugs_IntroScreen_Animation.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+    </video>
 
-<div id="popups">
-</div>
+    <video id="intro_loop" muted loop>
+      <source src="videos/BrainBugs_Glitch_LoopAnimation.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+    </video>
 
-<a class="grid__item grid__item--c1" id="square_ref" style="display:none">
-	<div class="stack">
-		<div class="stack__deco"></div>
-		<div class="stack__deco"></div>
-		<div class="stack__deco"></div>
-		<div class="stack__deco"></div>
-		<div class="stack__figure">
-			<div class="puzzle_piece" style=" width:100%; height: 100%;"></div>
-		</div>
-	</div>
-	<div class="grid__item-caption" style="display:none;">
-		<h3 class="grid__item-title"></h3>
-							
+    <a href='brainbugs.html'><div id="text_start"><&#33;-- Click to Start --></div></a>
+  </div>
+<script>
+const video = document.getElementById('intro_anim');
 
-	</div>
-</a>
+video.onended = (event) => {
+  video.style.display = "none";
 
-<div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
-	<img src='img/blueScreenError.png' style=" width: 100%;">
-	<div id="safemode_button">Restart in Safe Mode</div>
-</div>
+  var vid = document.getElementById("intro_loop");
 
 
-<script src="Script2.js"></script>
-<script src="js/anime.min.js"></script>
-<script src="js/main.js"></script>
+  vid.style.display = "block";
+  vid.play();
+
+  //var start_t = document.getElementById("text_start");
+
+  $("#text_start").animate({opacity: 100}, 1500);
+
+  console.log('Video stopped either because 1) it was over, ' +
+      'or 2) no further data is available.');
+
+};
+
+</script>
 
 </body>
 </html>
+
+
