--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <title></title>
 
   <style>
+    body, html
+    {
+        height: 100%;
+    }
+    
     body
     {
       background-color: black;
