--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
     #container
     {
-      width: 100%;
+      *width: 100%;
       height:  100%;
+      margin: 0px auto;
+      width: 1385px;
     }
 
     #text_start
