--- a/brainbugs.html
+++ b/brainbugs.html
@@ -54,7 +54,7 @@
 </a>
 
 <div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
-	<img src='img/blueScreenError.png' style=" width: 100%;">
+	<!-- <img src='img/blueScreenError.png' style=" width: 100%;"> -->
 	<div id="safemode_button">Restart in Safe Mode</div>
 </div>
 
