--- a/redmagic2.html
+++ b/redmagic2.html
@@ -10,8 +10,10 @@
 	-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<script type="text/javascript" src="http://localhost/loops/js/processing.js"></script> 	
+<!-- <script type="text/javascript" src="http://localhost/loops/js/processing.js"></script> 	-->
 
+<script type="text/javascript" src="https://mecardenal.github.io/loops/js/processing.js"></script>	
+	
 <style>
 
 html,
