--- a/redmagic2.html
+++ b/redmagic2.html
@@ -143,8 +143,11 @@ margin-top: -300px;
 	  <div class="wave"></div>
 	</div>
 </div>
-<script type="text/processing" data-processing-target="mycanvas" src="http://localhost/loops/js/redmagic_processing2.js"></script>
-<script type="text/javascript">
+<!-- <script type="text/processing" data-processing-target="mycanvas" src="http://localhost/loops/js/redmagic_processing2.js"></script> -->
+
+<script type="text/processing" data-processing-target="mycanvas" src="https://mecardenal.github.io/loops/js/redmagic_processing2.js"></script> 
+	
+	<script type="text/javascript">
 	
 	$( document ).ready(function() {
 	   
