--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     body
     {
       background-color: black;
+      overflow: hidden;
     }
 
     video
@@ -34,7 +35,7 @@
       *width: 100%;
       height:  100%;
       margin: 0px auto;
-      width: 1385px;
+      width: 1660px;
     }
 
     #text_start
