--- a/brainbugs.html
+++ b/brainbugs.html
@@ -56,7 +56,7 @@
 <div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
 	 <img src='img/blueScreenError.png' style=" width: 100%;"> 
 	<!--<div id="safemode_button">Restart in Safe Mode</div>-->
-	<div id="safemode_button">Play Again</div>
+	<div id="safemode_button"><a href='index.html'>Play Again</a></div>
 </div>
 
 
