--- a/brainbugs.html
+++ b/brainbugs.html
@@ -26,7 +26,7 @@
 
 <section class="content">
 <div id="winning_screen" style="display:none"><div>WELL DONE!</div><div style="font-size:100px; clear:both">Thanks for playing</div>
-<a href="brainbugs.html">Play again</a>
+<a href="index.html">Play again</a>
 </div>
 <div class="grid grid--effect-vega" id="grid_container">
 </div>
