Decent version for exhibition

--- a/brainbugs.html
+++ b/brainbugs.html
@@ -24,6 +24,8 @@
 <div class=' trashcan_open' style='display:none'><img src='img/delete_open.png' width='200px'></div>
 </div>
 
+<div id='title'><img src='img/BrainBugs_Title_transp.png' height='150'></div>
+
 <section class="content">
 <div id="winning_screen" style="display:none"><div>WELL DONE!</div><div style="font-size:100px; clear:both">Thanks for playing</div>
 <a href="index.html">Play again</a>
@@ -56,7 +58,7 @@
 <div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
 	 <img src='img/blueScreenError.png' style=" width: 100%;"> 
 	<!--<div id="safemode_button">Restart in Safe Mode</div>-->
-	<div id="safemode_button"><a href='index.html'>Play Again</a></div>
+	<div id="safemode_button"><a href='index.html' style="color:white">Play Again</a></div>
 </div>
 
 
