--- a/redmagic2.html
+++ b/redmagic2.html
@@ -4,28 +4,30 @@
 <head>
 	<meta charset="utf-8"> 
 	<title></title>
-	<!-- 	<script type="text/javascript" src="js/p5.js"> </script>
-	<script type="text/javascript" src="js/redmagic_p5.js"> </script> 
-	 	<script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.js"></script> 
-	-->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="http://localhost/loops/js/processing.js"></script> 	
 
-<!-- <script type="text/javascript" src="http://localhost/loops/js/processing.js"></script> 	-->
-
-<script type="text/javascript" src="https://mecardenal.github.io/loops/js/processing.js"></script>	
+<!-- 
+<script type="text/javascript" src="https://mecardenal.github.io/loops/js/processing.js"></script>	-->
 	
 <style>
 
 html,
 body {
+/*	pointer-events:none;*/
   height: 100%;
 }
 
 body {
    background-image: url(img/red_secret_bg.jpg);
   overflow: hidden;
- *  cursor: url("img/cursor.svg"), auto;
-cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='128' height='80' viewport='0 0 100 100' style='fill:black;font-size:300px;'><text y='216%' x='-70%'>💩</text></svg>") 16 0,auto;
+*cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='128' height='80' viewport='0 0 100 100' style='fill:black;font-size:300px;'><text y='216%' x='-70%'>💩</text></svg>") 16 0,auto;
+cursor: none;
 }
 
 .ocean {
@@ -61,6 +63,7 @@ cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  wi
     margin-left: -1600px;
   }
 }
+
 @keyframes swell {
   0%,
 	100% {
@@ -70,6 +73,7 @@ cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  wi
     transform: translate3d(0, 5px, 0);
   }
 }
+
 .endWave{
 	display:none;
 }
@@ -82,10 +86,12 @@ cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  wi
 	float: left;
 }
 
-.ocean, .wave
+/*.ocean, .wave*/
+#grupo_oceano
 {
 	opacity: 0;
 	display: none;
+	z-index: 3;
 }
 
 .ocean
@@ -121,16 +127,46 @@ margin-top: -300px;
 	opacity: 0;
 }
 
+#text_up
+{
+	color: black;
+	font-family: 'Press Start 2P';
+	font-size:  40px;
+    position: absolute;
+    top: 59px;
+    width: 100%;
+    text-align: center;
+    -webkit-text-stroke: 2px #000000;
+    z-index: 55;
+    background: white;
+    padding: 10px 0px 10px 0px;
+}
+
+#text_down
+{
+	color: black;
+	font-family: 'Press Start 2P';
+	font-size:  30px;
+    position: absolute;
+    bottom: 59px;
+    width: 100%;
+    text-align: center;
+    -webkit-text-stroke: 2px #000000;
+    z-index: 55;
+    background: white;
+    padding: 10px 0px 10px 0px;
+}
 </style>
 
 </head>
 
 <body>
 
+<div id="text_up">I am noticing I am having a thought of... </div>
+
 <canvas id="mycanvas"></canvas>
 
-<div><textarea id='write_thought'></textarea></div>
-<div id='letitgo'>Let it go</div>
+<div ><textarea id='write_thought'></textarea></div>
 <!-- Animation with sea waves -->
 
 <div id="grupo_oceano">
@@ -143,31 +179,44 @@ margin-top: -300px;
 	  <div class="wave"></div>
 	</div>
 </div>
-<!-- <script type="text/processing" data-processing-target="mycanvas" src="http://localhost/loops/js/redmagic_processing2.js"></script> -->
 
-<script type="text/processing" data-processing-target="mycanvas" src="https://mecardenal.github.io/loops/js/redmagic_processing2.js"></script> 
+<div id="text_down">Now read it</div>
+
+<!-- <script type="text/processing" data-processing-target="mycanvas" src="https://mecardenal.github.io/loops/js/redmagic_processing2.js"></script> -->
+
+<script type="text/processing" data-processing-target="mycanvas" src="http://localhost/loops/js/redmagic_processing2.js"></script> 
 	
 	<script type="text/javascript">
 	
 	$( document ).ready(function() {
+	   const sound_waves = new Audio("sound/WavesBCN.mp3");
+	   //sound_waves.volume = 0.5;
+	   var status = 0;
+	   var count_gt = 0;
+	   var count_a1 = 0;
+	   var count_a2 = 0;
+	   var count_a3 = 0;
 	   
 	   //Animation of waves erasing text
-	   $("#letitgo").on("click",function(){
-	   		$(".ocean, .wave").show().animate({opacity:1}, 2000, function(){
-	   			$(".ocean").animate({
-	   				"margin-bottom": "-150px"
-	   			}, 2000, function(){
-	   				$(".ocean").animate({
-	   					bottom: "-800px",
-	   					opacity:0
-	   				}, 800, function(){
-	   					$(".ocean, .wave").hide();
-	   				});
-	   			});	
-	   		});
-
-	   		$("#write_thought").val("");
-	   });
+	   function go_thought(){
+	   	   		$("#grupo_oceano").show().animate({opacity:1}, 2000, function(){
+		   			$("#text_down").hide();
+		   			$(".ocean").animate({
+		   					"margin-bottom": "-150px"
+		   			}, 3000, function(){
+		   				$("#mycanvas").hide();
+		   				$(".ocean").animate({
+		   					bottom: "-800px",
+		   					opacity:0
+		   				}, 2000, function(){
+		   					$(".grupo_oceano").hide();
+		   					$("#text_down").animate({opacity: 0}, 2000, function(){
+		   						location.reload();
+		   					});
+		   				});
+		   			});	
+		   		});
+			};
 
 	   //Setting cursor in textarea on loading site
 	   $("#write_thought").focus();
@@ -176,7 +225,40 @@ margin-top: -300px;
 	   	   $("#write_thought").focus();
 	   });
 
+	$("#text_down").text("Press ENTER when you are ready");
+
+	//When pressing ENTER
+	$(document).on('keypress',function(e) {
+	    if((e.which == 13)&&(status == 0)) {
+	        $("#write_thought").attr("disabled","disabled");
+        	$("#text_down").animate({opacity:0}, 1000, function(){
+        		$(this).text("Now read your thought and press SPACEBAR to let it go");
+        		$(this).animate({opacity: 1}, 1000);
+        	});
+        	sound_waves.play();
+	    	status = 1;
+	    }
 	});
+
+	//Pressing SPACEBAR
+	$(document).on('keypress',function(e) {
+	    if((e.which == 32)&&(status == 1)) {
+	       
+	       	$("#text_down").animate({opacity:0}, 1000);
+        	status= 2;
+        	go_thought();
+	    }
+	});
+
+	});
+
+
+	$(document).ready(function() {
+    $("body").on("click",function(e){
+       e.preventDefault();
+       return false;
+    }); 
+}); 
 
 </script>
 </body>
