--- a/redmagic2.html
+++ b/redmagic2.html
@@ -10,10 +10,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="text/javascript" src="http://localhost/loops/js/processing.js"></script> 	
+<script type="text/javascript" src="https://mecardenal.github.io/loops/js/processing.js"></script>
 
 <!-- 
-<script type="text/javascript" src="https://mecardenal.github.io/loops/js/processing.js"></script>	-->
+	
+<script type="text/javascript" src="http://localhost/loops/js/processing.js"></script> 	-->
 	
 <style>
 
@@ -182,9 +183,9 @@ margin-top: -300px;
 
 <div id="text_down">Now read it</div>
 
-<!-- <script type="text/processing" data-processing-target="mycanvas" src="https://mecardenal.github.io/loops/js/redmagic_processing2.js"></script> -->
-
-<script type="text/processing" data-processing-target="mycanvas" src="http://localhost/loops/js/redmagic_processing2.js"></script> 
+<!-- <script type="text/processing" data-processing-target="mycanvas" src="http://localhost/loops/js/redmagic_processing2.js"></script> -->
+ <script type="text/processing" data-processing-target="mycanvas" src="https://mecardenal.github.io/loops/js/redmagic_processing2.js"></script>
+ 
 	
 	<script type="text/javascript">
 	
