--- a/brainbugs.html
+++ b/brainbugs.html
@@ -58,7 +58,8 @@
 <div id="blue_screen" style="position: absolute; top: 0px;display:none;    width: 100%;">
 	 <img src='img/blueScreenError.png' style=" width: 100%;"> 
 	<!--<div id="safemode_button">Restart in Safe Mode</div>-->
-	<div id="safemode_button"><a href='index.html' style="color:white">Play Again</a></div>
+	<div id="playagain_button"><a href='index.html' style="color:white">Play Again</a></div>
+	<div id="safemode_button" title="Click to do de puzzle without interruptions"><a href='index.html' style="color:white">Safe Mode</a></div>
 </div>
 
 
