--- a/brainbugs.html
+++ b/brainbugs.html
@@ -59,7 +59,7 @@
 	 <img src='img/blueScreenError.png' style=" width: 100%;"> 
 	<!--<div id="safemode_button">Restart in Safe Mode</div>-->
 	<div id="playagain_button"><a href='index.html' style="color:white">Play Again</a></div>
-	<div id="safemode_button" title="Click to do de puzzle without interruptions"><a href='index.html' style="color:white">Safe Mode</a></div>
+	<div id="safemode_button" title="Click to do de puzzle without interruptions"><span style="color:white">Safe Mode</span></div>
 </div>
 
 
